// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uva test default PATIENT basal  0.75 from TREATMENTS should generate flat sgv 1`] = `
Object {
  "Gp": 188.09768032066034,
  "Gt": 142.52831046236705,
  "I_": 37.45421409627291,
  "Il": 1.8347100374676815,
  "Ip": 1.8981815732761604,
  "Isc1": 53.314728038885335,
  "Isc2": 46.35671071668582,
  "Qgut": 0,
  "Qsto1": 0,
  "Qsto2": 0,
  "W": 0,
  "X": -0.02909710842989371,
  "XL": 37.48661426794034,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal  0.75 from TREATMENTS should generate flat sgv 2`] = `
Array [
  100.00004341832658,
  100.00063926368067,
  100.00252725607449,
  100.00601669304095,
  100.01099554189139,
  100.01710944059786,
  100.02389867218749,
  100.03087836643405,
  100.03758071320722,
  100.04357553884533,
  100.04847924685708,
  100.05195761737252,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 10U should generate a curve with min 40 1`] = `
Object {
  "Gp": 80.04810422214628,
  "Gt": 40.28697248590791,
  "I_": 208.42877476055517,
  "Il": 44.76743838707893,
  "Ip": 19.99316654766212,
  "Isc1": 176.40956260401776,
  "Isc2": 254.25793769144948,
  "Qgut": 0,
  "Qsto1": 0,
  "Qsto2": 0,
  "W": 0,
  "X": 338.01703372002186,
  "XL": 87.38616640758718,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 10U should generate a curve with min 40 2`] = `
Array [
  100.00004264161005,
  100.0006213714681,
  100.00242271052365,
  99.99792384675492,
  99.90673296498714,
  99.59909800024302,
  98.96215339822214,
  97.91534156519907,
  96.41177823388135,
  94.43520509098101,
  91.9954279300371,
  89.12335312196704,
  85.86608792575532,
  82.2823120235828,
  78.43802110801597,
  74.40270126465836,
  70.245978842596,
  66.03478650703819,
  61.83108190049705,
  57.69014483856612,
  53.65945990503258,
  49.77816473540069,
  46.07701388000602,
  42.57877884156717,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
  40,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 50g CARBS + 5U should generate a curve 1`] = `
Object {
  "Gp": 237.71160477794848,
  "Gt": 164.04949378844253,
  "I_": 139.04962760701002,
  "Il": 6.451626007441896,
  "Ip": 5.589723471118134,
  "Isc1": 84.810779553499,
  "Isc2": 129.8627622012441,
  "Qgut": 1176.0809941175373,
  "Qsto1": 13.363407253453056,
  "Qsto2": 1026.1103826643443,
  "W": 0,
  "X": 109.21648810360648,
  "XL": 96.18453805076754,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 50g CARBS + 5U should generate a curve 2`] = `
Array [
  100.00004344074452,
  100.00063978009236,
  100.00253027350361,
  100.00022145358407,
  99.93352251449454,
  99.70549349667368,
  99.36967894376468,
  100.12142808950391,
  103.10274182257979,
  108.28238455043054,
  115.10910078366179,
  122.90477989974627,
  131.03493344770885,
  138.97454040663996,
  146.32505688416595,
  152.80894987326482,
  158.25447083286465,
  162.57702855942043,
  165.760420781662,
  167.83955847117625,
  168.88541457348984,
  168.99242331502975,
  168.2682845298544,
  166.8259925843457,
  164.77784871243082,
  162.2311904881151,
  159.28556339940982,
  156.03106083916649,
  152.5475704853508,
  148.90468787540897,
  145.16209051040914,
  141.37020408761003,
  137.57103153082514,
  133.79905117742422,
  130.0821202677148,
  126.44234296699388,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 50g CARBS should generate a curve 1`] = `
Object {
  "Gp": 432.6247096665882,
  "Gt": 340.46068896209886,
  "I_": 38.57724584323862,
  "Il": 1.940889689379203,
  "Ip": 1.998094193876495,
  "Isc1": 54.75534609101646,
  "Isc2": 48.7799616573907,
  "Qgut": 480.2344473447339,
  "Qsto1": 2.505580166758789,
  "Qsto2": 400.20308230431124,
  "W": 0,
  "X": 2.0828726555780763,
  "XL": 37.82546520360286,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 50g CARBS should generate a curve 2`] = `
Array [
  100.13725958657677,
  101.66671679221494,
  105.76653288723423,
  112.42478387876761,
  121.10152166645324,
  131.12795040323837,
  141.8782273587602,
  152.83298434722747,
  163.59258009768376,
  173.8683851820691,
  183.46456829131233,
  192.2480304575594,
  200.15852177726111,
  207.1822441277268,
  213.33515276775458,
  218.65386189514217,
  223.18842688918403,
  226.99680439514734,
  230.1407204863062,
  232.6826763233896,
  234.6838488240752,
  236.2026811005261,
  237.29399475996456,
  238.00848980906625,
  238.39252662459808,
  238.48810819955128,
  238.3330000986862,
  237.96094088512334,
  237.40190785256956,
  236.68241230710095,
  235.82580590329954,
  234.85258508686033,
  233.78068488924404,
  232.6257564527501,
  231.40142497292766,
  230.119526418398,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 500g CARBS should generate a curve with max 400 1`] = `
Object {
  "Gp": 707.55656999924,
  "Gt": 452.78248957686606,
  "I_": 37.63501554830254,
  "Il": 1.8712006820591789,
  "Ip": 1.9328330272679328,
  "Isc1": 53.96902765394085,
  "Isc2": 47.19081523736483,
  "Qgut": 29204.67595082871,
  "Qsto1": 6082.262534675929,
  "Qsto2": 41798.94434707729,
  "W": 0,
  "X": 0.5224347663442177,
  "XL": 37.49672892692031,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE + 500g CARBS should generate a curve with max 400 2`] = `
Array [
  100.00004344074452,
  100.00063978009236,
  100.00253027350361,
  100.00602685486191,
  100.01102094323277,
  100.0171621292742,
  100.43564333859274,
  105.02927190399573,
  117.32987768907162,
  137.3006307191245,
  163.32314847852822,
  193.38954209090733,
  225.58199479759315,
  258.3540533640414,
  290.5296655468007,
  321.26333383006187,
  349.9882539271432,
  376.3598776591702,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
  400,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE should generate flat sgv 1`] = `
Object {
  "Gp": 188.0989883597235,
  "Gt": 142.53032856968628,
  "I_": 37.450839655789956,
  "Il": 1.833736419329815,
  "Ip": 1.897201686367541,
  "Isc1": 53.26010599146471,
  "Isc2": 46.33463321870599,
  "Qgut": 0,
  "Qsto1": 0,
  "Qsto2": 0,
  "W": 0,
  "X": -0.038965994855743834,
  "XL": 37.48618829640274,
  "Y": 0,
  "Z": 0,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE should generate flat sgv 2`] = `
Array [
  100.00004344074452,
  100.00063978009236,
  100.00253027350361,
  100.00602685486191,
  100.01102094323277,
  100.0171621292742,
  100.02399487462384,
  100.03103849369849,
  100.03782920069322,
  100.0439405661758,
  100.0489923765006,
  100.05265338283166,
]
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE with 60% exercise should generate curve sgv 1`] = `
Object {
  "Gp": 118.84153617067572,
  "Gt": 81.43288793763907,
  "I_": 38.57724584323862,
  "Il": 1.940889689379203,
  "Ip": 1.998094193876495,
  "Isc1": 54.75534609101646,
  "Isc2": 48.7799616573907,
  "Qgut": 0,
  "Qsto1": 0,
  "Qsto2": 0,
  "W": 5342.999999999982,
  "X": 2.0828726555780763,
  "XL": 37.82546520360286,
  "Y": 8.438303689132207e-9,
  "Z": 0.9040418973768898,
}
`;

exports[`uva test default PATIENT basal 0.75 from PROFILE with 60% exercise should generate curve sgv 2`] = `
Array [
  99.89814037698908,
  99.4225317645088,
  98.58079249584156,
  97.47135416720675,
  96.17665561268514,
  94.75021735382575,
  93.22412631325132,
  91.61755128436114,
  89.94259150223087,
  88.20770959415093,
  86.4195990416085,
  84.58415529460736,
  82.70696437894097,
  80.8789522430743,
  79.32098317247905,
  78.02148826733692,
  76.89899992135366,
  75.88736703334253,
  74.94517142388875,
  74.04903931300358,
  73.1864320113355,
  72.35076967925912,
  71.53859680949273,
  70.74812546887541,
  69.97946226704421,
  69.23512726465486,
  68.51711471735496,
  67.82605116816852,
  67.16181712859564,
  66.52395017459978,
  65.91183709895937,
  65.32480318833764,
  64.76215342253506,
  64.22319131797187,
  63.70722742426185,
  63.21358306950837,
]
`;
